---------------------------------------------
- Wonder Scale Website                      -
---------------------------------------------

- v1.0.1011                                 -
---------------------------------------------
- 2020-06-13                                -
---------------------------------------------
.: WSM: Task: Adding component displayed preview (WSM-77)

---------------------------------------------
- 2020-06-11                                -
---------------------------------------------
.: WSM: Task: Unpublish page to not show to public (WSM-118)

---------------------------------------------
- 2020-06-10                                -
---------------------------------------------
.: WSW: Task: Change layout in website (WSW-39)
.: WSW: BugFix: Website icon should be removed when no website url (WSW-45)
.: WSW: Task: Loading top bar (WSW-41)

- v1.0.1010                                 -
---------------------------------------------
- 2020-06-07                                -
---------------------------------------------
.: WSW: Task: Add an 404 page to have better SEO (WSW-33)
.: WSW: Task: Update testing script (WSW-25)
.: WSW: Task: Update banner (WSW-24)
.: WSW: Task: Fix CORS issue (WSW-25)

---------------------------------------------
- 2020-06-06                                -
---------------------------------------------
.: WSW: Task: Design a new default user banner (WSW-24)
.: WSW: Task: Add a default profile image to item (WSW-27)
.: WSW: Task: Unpublished Items in category is displayed (WSW-31)
.: WSW: Task: Add Today special if page is a restaurant (WSW-26)
.: WSW: Task: Add default shop profile image (WSW-34)

---------------------------------------------
- 2020-06-05                                -
---------------------------------------------
.: WSW: Task: QR code image slow render issue (WSW-25)
.: WSW: Task: Change Share URL to username (WSW-29)