@@ -7,6 +7,7 @@
 - 2020-06-13                                -
 ---------------------------------------------
 .: WSM: Task: Adding component displayed preview (WSM-77)
+.: WSM: Task: Shop not found if username has changed when scan qr code (WSW-49)
 
 ---------------------------------------------
 - 2020-06-11                                -
